// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > smtp > smtp > that an email is sent after a response for a an access request review 1`] = `undefined`;

exports[`services > smtp > smtp > that an email is sent after a response for a release review 1`] = `undefined`;

exports[`services > smtp > smtp > that an email is sent for Access Request Reviews 1`] = `
[
  {
    "from": "\\"Bailo 📝\\" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
    "to": "email@email.com",
  },
]
`;

exports[`services > smtp > smtp > that an email is sent for Release Reviews 1`] = `
[
  {
    "from": "\\"Bailo 📝\\" <bailo@example.org>",
    "html": "html",
    "subject": "subject",
    "text": "text",
    "to": "email@email.com",
  },
]
`;

exports[`services > smtp > smtp > that sendEmail is called for each member of a group entity 1`] = `
[
  [
    {
      "from": "\\"Bailo 📝\\" <bailo@example.org>",
      "html": "html",
      "subject": "subject",
      "text": "text",
      "to": "member1@email.com",
    },
  ],
  [
    {
      "from": "\\"Bailo 📝\\" <bailo@example.org>",
      "html": "html",
      "subject": "subject",
      "text": "text",
      "to": "member2@email.com",
    },
  ],
]
`;
